--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#b91d47">
 	<meta name="theme-color" content="#ffffff">
-	<script src="./js/main.js"></script>
+	<script src="./dist/main.js" defer></script>
 </head>
 
 <body>
@@ -60,11 +60,11 @@
 			До конца акции осталось
 		</div>
 		<div class="timer-numbers" id="timer">
-			<span id="timer-hours">19</span>
+			<span id="timer-hours">00</span>
 			<span>:</span>
-			<span id="timer-minutes">45</span>
+			<span id="timer-minutes">00</span>
 			<span>:</span>
-			<span id="timer-seconds">12</span>
+			<span id="timer-seconds">00</span>
 		</div>
 	</div>
 	<form id="form1" name="user_form" class="main-form">
@@ -169,7 +169,7 @@
 		<h2>Портфолио</h2>
 		<div class="underline"></div>
 		<ul class="portfolio-content" id="all-progects">
-			<li class="portfolio-item portfolio-item-active"><img src="images/portfilio/portfolio-01.jpg"
+			<li class="portfolio-item portfolio-item-active"><img src="../images/portfilio/portfolio-01.jpg"
 																														alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-04.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-06.jpg" alt="portfolio"></li>
@@ -230,8 +230,8 @@
 		<div class="underline"></div>
 		<div class="companies-wrapper">
 			<div class="companies-hor">
-				<div class="companies-hor-item"><img src="images/companies/companies-1.png" alt=""></div>
 				<div class="companies-hor-item"><img src="images/companies/companies-2.png" alt=""></div>
+				<div class="companies-hor-item"><img src="images/companies/companies-1.png" alt=""></div>
 				<div class="companies-hor-item"><img src="images/companies/companies-3.png" alt=""></div>
 				<div class="companies-hor-item"><img src="images/companies/companies-4.png" alt=""></div>
 				<div class="companies-hor-item"><img src="images/companies/companies-5.png" alt=""></div>
@@ -250,13 +250,13 @@
 		<div class="row">
 			<div class="col-md-4 col-sm-6 col-12">
 				<img class="command__photo" src="images/command/command-1.jpg"
-						 data-img="images/command/command-1a.jpg" alt="">
+						 data-img="../images/command/command-1a.jpg" alt="">
 				<div class="description">Quentin Tarantino</div>
 				<p>Директор компании</p>
 			</div>
 			<div class="col-md-4 col-sm-6 col-12">
 				<img class="command__photo" src="images/command/command-2.jpg"
-						 data-img="images/command/command-2a.jpg" alt="">
+						 data-img="../images/command/command-2a.jpg" alt="">
 				<div class="description">Parker Posey</div>
 				<p>Финансовый директор</p>
 			</div>
